--- a/style.css
+++ b/style.css
@@ -3,7 +3,24 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 18px;
-    margin: 10;
+    color: #777;
+    padding: 40px 0;
+    margin: 0;
+    margin-bottom: 10px;
+  
+
+}
+
+nav {
+
+    background-color: #ebebeb;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
+    color: #777;
+    padding: 40px 0;
+    margin: 0;
+    margin-bottom: 20px;
 
 }
 
