--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@ header {
     font-size: 18px;
     color: #777;
     padding: 40px 0;
-    margin: 0;
+    margin: 150px;
     margin-bottom: 10px;
+    margin-top: 10px;
+    ;
   
 
 }
@@ -19,8 +21,9 @@ nav {
     font-size: 18px;
     color: #777;
     padding: 40px 0;
-    margin: 0;
+    margin: 150px;
     margin-bottom: 20px;
+    margin-top: 10px;
 
 }
 
