added aside and moved it around

--- a/style.css
+++ b/style.css
@@ -45,3 +45,17 @@ section {
     float: left;
 
 }
+aside {
+
+background-color: #ebebeb;
+font-family: Arial, Helvetica, sans-serif;
+text-align: center;
+font-size: 18px;
+color: #777;
+padding: 150px 225px;
+margin: 200px 800px;
+margin-bottom: 10px;
+margin-top: 20px;
+
+
+}
