added footer at bottom of page

--- a/style.css
+++ b/style.css
@@ -59,3 +59,19 @@ margin-top: 20px;
 
 
 }
+
+footer {
+
+    background-color: #ebebeb;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
+    color: #777;
+    padding: 40px 0;
+    margin: 150px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    float: bottom;
+
+
+}
