modified and changed aside margins

--- a/style.css
+++ b/style.css
@@ -52,10 +52,9 @@ font-family: Arial, Helvetica, sans-serif;
 text-align: center;
 font-size: 18px;
 color: #777;
-padding: 150px 225px;
-margin: 200px 800px;
-margin-bottom: 10px;
-margin-top: 20px;
+padding: 150px 247px;
+margin: 20px 250px 10px 780px;
+
 
 
 }
