added article and modified

--- a/style.css
+++ b/style.css
@@ -43,6 +43,23 @@ section {
     margin-bottom: 10px;
     margin-top: 10px;
     float: left;
+    position: relative;
+
+}
+
+article {
+
+    background-color: #777;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
+    color: #ebebeb;
+    padding: 90px 250px;
+    margin: 100px 100px 100px 180px;
+    
+    position: absolute;
+  
+
 
 }
 aside {
