--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ article {
     text-align: center;
     font-size: 18px;
     color: #ebebeb;
-    padding: 35px 55px;
-    margin: 100px 10px 10px 167px;
+    padding: 30px 0px;
+    margin: 90px 20px 20px 162px;
     
     position: absolute;
   
@@ -98,7 +98,20 @@ h1 {
     text-align: center;
     font-size: 18px;
     color: #777;
-    padding: 20px 100px 20px 100px;
-    margin: 10px 50px 50px 167px;
+    padding: 20px 190px 20px 190px;
+    margin: 10px 60px 5px 60px;
     
+}
+
+p {
+    background-color: #ebebeb;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
+    color: #777;
+    padding: 20px 200px 20px 200px;
+    margin: 10px 10px 5px 10px;
+
+
+
 }
